# babeleo-qt4

./: AUTHORS  CHANGELOG  CMakeLists.txt  INSTALL  README  README.md  TODO
applet/: CMakeLists.txt  babelengine.cpp  babelengine.h  babeleo.cpp  babeleo.h  babeleoOtherSettings.ui  babeleoSettings.ui  metadata.json  plasma-applet-babeleo.desktop
applet/icons/: CMakeLists.txt
applet/package/: metadata.json
applet/package/contents/config/: config.qml  main.xml
applet/package/contents/ui/: configSearchEngines.qml  main.qml
po/de/: plasma_applet_babeleo.po
po/fr/: plasma_applet_babeleo.po
